-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 13
-
Component/s: hotspot
-
b31
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228522 | 14 | Kim Barrett | P3 | Resolved | Fixed | b07 |
| JDK-8228794 | 13.0.2 | Kim Barrett | P3 | Resolved | Fixed | b01 |
| JDK-8229068 | 13.0.1 | Kim Barrett | P3 | Resolved | Fixed | b05 |
The deleteGlobalHandle function in jvmciCompilerToVM.cpp was not updated from the old JNIHandleBlock implementation when these global handles were changed to use OopStorage. So instead of calling OopStorage::release, deleteGlobalHandles just leaks the handle.
- backported by
-
JDK-8228522 JVMCI deleteGlobalHandle doesn't delete the handle
-
- Resolved
-
-
JDK-8228794 JVMCI deleteGlobalHandle doesn't delete the handle
-
- Resolved
-
-
JDK-8229068 JVMCI deleteGlobalHandle doesn't delete the handle
-
- Resolved
-