8228340: JVMCI deleteGlobalHandle doesn't delete the handle

Add missing call to OopStorage::release() when deleting global handles in JVMCI to prevent handles leak.

Reviewed-by: kvn, dlong